update userContrller, entity Cart,Oders

--- a/BE/src/main/resources/application.properties
+++ b/BE/src/main/resources/application.properties
@@ -11,4 +11,11 @@ app.cors.allowed-origins=http://localhost:3000
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
-
+spring.mail.host=smtp.gmail.com
+spring.mail.username=webstore.perfume@gmail.com
+spring.mail.password=Fcnhfk-rbtd
+spring.mail.port=465
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+mail.debug=false
