edit package, update ProductController, SecurityConfig, Mapper, ProductService
ProductMapper, CategoryMapper, FormatMapper

--- a/BE/src/main/resources/application.properties
+++ b/BE/src/main/resources/application.properties
@@ -1,16 +1,23 @@
+#JDBC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/bookstore
 spring.datasource.username=root
-spring.datasource.password=
+#JPA
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#FILTER
 spring.mvc.hiddenmethod.filter.enabled=true
+#JWT
 jwt.secret=HRlELXqpSBfgdsdsfdsfs
+#CORS
 app.cors.allowed-origins=http://localhost:3000
+#OpenAPI
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
-
+#Prefix path
+server.servlet.contextPath=/api
+#Mail
 spring.mail.host=smtp.gmail.com
 spring.mail.username=webstore.perfume@gmail.com
 spring.mail.password=Fcnhfk-rbtd
@@ -19,3 +26,4 @@ spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 mail.debug=false
+
